--- a/ConcurrencyBugsDemo.csproj
+++ b/ConcurrencyBugsDemo.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SingletonTwoPlusTwo.cs" />
     <Compile Include="LocalTwoPlusTwo.cs" />
     <Compile Include="ThreadSafeInstanceTwoPlusTwo.cs" />
     <Compile Include="InstanceTwoPlusTwo.cs" />
